--- a/src/pages/Dashboard/styles.module.scss
+++ b/src/pages/Dashboard/styles.module.scss
@@ -11,6 +11,7 @@
     padding: 20px;
     border-right: 5px solid #a6a6a6;
     height: 100%;
+    flex: 1;
     & > * {
       margin: 20px 0px;
     }
@@ -53,6 +54,7 @@
     width: 100%;
     flex-wrap: wrap;
     overflow: auto;
+    flex: 5;
     & > * {
       margin: 10px 30px;
     }
