--- a/src/components/ActionsToolbar/styles.module.scss
+++ b/src/components/ActionsToolbar/styles.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px 0;
+  z-index: 10;
   background: linear-gradient(
     270deg,
     rgba(116, 116, 116, 0.1647) 0%,
