--- a/src/ components/Button/styles.module.scss
+++ b/src/ components/Button/styles.module.scss
@@ -1,12 +1,17 @@
 .button {
-  width: 100%;
-  font-size: 1.5rem;
+  align-items: center;
   background: #000000;
-  border: 3px solid #000000;
-  border-radius: 12px;
-  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid;
+  box-shadow: rgb(0 0 0 / 20%) 2px 3px 8px -2px;
   color: #ffffff;
   cursor: pointer;
+  display: flex;
+  font-size: 16px;
+  justify-content: center;
+  padding: 10px;
+  width: 400px;
+
   &:hover {
     opacity: 0.5;
   }
