--- a/src/ components/Input/styles.module.scss
+++ b/src/ components/Input/styles.module.scss
@@ -1,9 +1,9 @@
 .input {
-  width: 100%;
-  font-size: 1.5rem;
+  width: 400px;
+  font-size: 18px;
   background: #ffffff;
-  border: 3px solid #000000;
-  border-radius: 12px;
+  border: 1px solid #bdbdbd;
+  border-radius: 5px;
+  box-shadow: rgb(0 0 0 / 20%) 2px 3px 8px -2px;
   padding: 10px;
-  color: #ffffff;
 }
