--- a/src/pages/Workspace/styles.module.scss
+++ b/src/pages/Workspace/styles.module.scss
@@ -2,3 +2,18 @@
   position: relative;
   height: 100vh;
 }
+
+.toolsSelector {
+  position: absolute;
+  top: 30px;
+  right: 0px;
+  width: 80px;
+
+  button {
+    border: none;
+    width: 100%;
+    height: 30px;
+    
+  }
+
+}
