feature: install chart

--- a/src/pages/Workspace/Oscilloscope/styles.module.scss
+++ b/src/pages/Workspace/Oscilloscope/styles.module.scss
@@ -28,7 +28,7 @@
       max-width: 1261px;
       position: absolute;
       bottom: 75px;
-      background: black;
+      background: rgba(0, 0, 0, 0.197);
     }
   }
 }
