--- a/src/pages/Dashboard/styles.module.scss
+++ b/src/pages/Dashboard/styles.module.scss
@@ -48,9 +48,9 @@
   main {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 100px 0;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 60px 0;
     width: 100%;
     flex-wrap: wrap;
     overflow: auto;
