--- a/src/components/CircuitCard/styles.module.scss
+++ b/src/components/CircuitCard/styles.module.scss
@@ -22,7 +22,10 @@
   }
 
   img {
-    width:300px;
+    width: 100%;
+    object-fit: contain;
+    height: 100%;
+
   }
 
   & > span:first-of-type {
