--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -10,7 +10,7 @@
   font-size: 16px;
   justify-content: center;
   padding: 10px;
-  width: 400px;
+  width: 100%;
 
   &:hover {
     opacity: 0.5;
