feat: update login method for email and password

--- a/src/pages/Login/styles.module.scss
+++ b/src/pages/Login/styles.module.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   justify-content: center;
 
-  main {
+  form {
     align-items: center;
     display: flex;
     flex-direction: column;
