--- a/src/components/Icon/styles.module.scss
+++ b/src/components/Icon/styles.module.scss
@@ -3,7 +3,13 @@
   cursor: pointer;
   background: transparent;
   z-index: 2;
+  position: relative;
+
+
+
+
   &:hover {
     opacity: 0.6;
+
   }
 }
