--- a/src/pages/Dashboard/styles.module.scss
+++ b/src/pages/Dashboard/styles.module.scss
@@ -60,15 +60,17 @@
     flex-wrap: wrap;
     overflow: auto;
     flex: 5;
+    
+    .nocircuitmessage{
+      width: 70%
+    }
+
     & > * {
       margin: 22px 27px;
       height: 150px;
       width: 230px;
     }
 
-    span {
-      width: 70%
-    }
 
   }
 }
